@@ -8,6 +8,7 @@ Date: 00. 00. 0000
   Bugfixes:
     - Fixed that alt-adding a subfactory would crash if you had no other subfactories
     - Fixed that you couldn't view subfloors for subfactories that are in the archive
+    - Fixed a crash when changing the window size while a modal dialog is open
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.9
